Added error and loading classes and allow to resolve multiple promises before bootstrapping.

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,12 +5,11 @@
 </head>
 <body>
 
-<div ng-controller="AppController">
-    Value: {{ value }}
-</div>
+<ul>
+    <li><a href="simple/index.html">simple demo</a></li>
+    <li><a href="multi/index.html">multi resolve demo</a></li>
+    <li><a href="error/index.html">error in resolve demo</a></li>
+</ul>
 
-<script src="/bower_components/angular/angular.js"></script>
-<script src="/src/async-bootstrap.js"></script>
-<script src="demo.js"></script>
 </body>
 </html>
