Prepare release angular-deferred-bootstrap 0.0.1

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Async Bootstrap Demo</title>
+    <title>Deferred Bootstrap Demo</title>
 </head>
 <body>
 
