--- a/demo/multi/index.html
+++ b/demo/multi/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Async Bootstrap Demo</title>
+    <title>Deferred Bootstrap Demo</title>
     <style type="text/css">
         #loading {
             display: none;
         }
-        .async-bootstrap-loading #loading {
+        .deferred-bootstrap-loading #loading {
             display: block !important;
         }
 
         #error {
             display: none;
         }
-        .async-bootstrap-error #error {
+        .deferred-bootstrap-error #error {
             display: block !important;
             background: red;
         }
@@ -34,7 +34,7 @@
 </div>
 
 <script src="/bower_components/angular/angular.js"></script>
-<script src="/src/async-bootstrap.js"></script>
+<script src="/src/deferred-bootstrap.js"></script>
 <script src="multi-resolve-demo.js"></script>
 </body>
 </html>
