add onError function to allow custom error handling, closes #1

--- a/demo/error-handler/index.html
+++ b/demo/error-handler/index.html
@@ -44,6 +44,9 @@ window.deferredBootstrapper.bootstrap({
       }, 2000);
       return deferred.promise;
     }
+  },
+  onError: function(error) {
+    alert('could not start app: ' + error);
   }
 });
 
