--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,7 @@
     <li><a href="simple/index.html">simple demo</a></li>
     <li><a href="multi/index.html">multi resolve demo</a></li>
     <li><a href="error/index.html">error in resolve demo</a></li>
+    <li><a href="error-handler/index.html">custom error handler</a></li>
 </ul>
 
 </body>
