Cleaned up demo pages.

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,10 +6,10 @@
 <body>
 
 <ul>
-    <li><a href="simple/index.html">simple demo</a></li>
-    <li><a href="multi/index.html">multi resolve demo</a></li>
-    <li><a href="error/index.html">error in resolve demo</a></li>
-    <li><a href="error-handler/index.html">custom error handler</a></li>
+    <li><a href="simple.html">simple demo</a></li>
+    <li><a href="multi.html">multi resolve demo</a></li>
+    <li><a href="error.html">error in resolve demo</a></li>
+    <li><a href="error-handler.html">error handler</a></li>
 </ul>
 
 </body>
