Update demos and docs for new injectorModules feature and dependency injection on resolve functions.

--- a/demo/error-handler.html
+++ b/demo/error-handler.html
@@ -37,13 +37,13 @@ window.deferredBootstrapper.bootstrap({
   element: window.document.body,
   module: 'demoApp',
   resolve: {
-    ERROR: function ($http, $q, injector) {
-      var deferred = $q.defer(), $timeout = injector.get('$timeout');
+    ERROR: ['$http', '$q', '$timeout', function ($http, $q, $timeout) {
+      var deferred = $q.defer();
       $timeout(function () {
         deferred.reject('EXCEPTION');
       }, 2000);
       return deferred.promise;
-    }
+    }]
   },
   onError: function(error) {
     alert('could not start app: ' + error);
