Added new demo for ability to add constants to specific modules

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,7 @@
 <ul>
     <li><a href="simple.html">simple demo</a></li>
     <li><a href="multi.html">multi resolve demo</a></li>
+    <li><a href="constant-to-specific-module.html">constant to specific modules</a></li>
     <li><a href="error.html">error in resolve demo</a></li>
     <li><a href="error-handler.html">error handler</a></li>
 </ul>
